GUI Verschönerungen und Fix von Warnings und Schreibfehlern