@@ -14,7 +14,7 @@ public abstract class Mitspieler {
     //Fragt die Spielabsicht der Mitspieler ab.
     public abstract void spielabsichtFragen(int wiederholung, SpielArt hoechstesSpiel, int vorhand);
 
-    //Fragt die Farbe für das Spiel von dem Spieler, der das höchste Spiel angeboten hat ab. (Farbe bei Sau fürs Ausrufen, bei Solo für Trumpf)
+    //Fragt die Farbe für das Spiel von dem Spieler ab, der das höchste Spiel angeboten hat. (Farbe bei Sau fürs Ausrufen, bei Solo für Trumpf)
     public abstract void farbeFuerSpielAbsicht(SpielArt spielArt);
 
     //Fordert einen Mitspieler auf eine erlaubte Karte zu legen.
@@ -23,16 +23,16 @@ public abstract class Mitspieler {
     //Legt die Startwerte für eine neue Runde fest.
     public abstract void rundeStarten(ArrayList<Spielkarte> karten, int wieVielterSpieler);
 
-    //Nachricht an Mitspieler welche Spielart gespielt wird, überreicht Farbe wenn Solo und Sau wenn Sauspiel.
+    //Nachricht an Mitspieler, welche Spielart gespielt wird, überreicht Farbe als Solo und Sau als Sauspiel.
     public abstract void spielArtEntschieden(int spieler, Farbe farbe, SpielArt spielArt);
 
-    //Nachricht an Mitspieler welcher spieler die Runde gewonnen hat.
+    //Nachricht an Mitspieler, welcher Spieler die Runde gewonnen hat.
     public abstract void rundeGewonnen(int[] gewinner, int[] punkte);
 
-    //Nachricht an Mitspieler welche Karte von einem Mitspieler gelegt wurde (auch wenn der Mitspieler selbst die Karte gelegt hat).
+    //Nachricht an Mitspieler, welche Karte von einem Mitspieler gelegt wurde (auch wenn der Mitspieler selbst die Karte gelegt hat).
     public abstract void karteWurdeGelegt(Spielkarte karte, int spielerHatGelegt, int wiederholung);
 
-    //Nachricht an Mitspieler welcher Spieler den Stich gewonnen hat.
+    //Nachricht an Mitspieler, welcher Spieler den Stich gewonnen hat.
     public abstract void stichGewonnen(int spieler);
 
     //Gibt eine Identifikation der Art des Mitspielers zurück (Bot oder Spieler)
@@ -43,14 +43,14 @@ public abstract class Mitspieler {
 
     /*
         Gibt eine Arraylist mit allen Karten zurück, welche unter Berücksichtigung der Spielart
-        und dessen Eigenschaften und der Karte die von der Vorhand gespielt wurde.
+        und deren Eigenschaften und der Karte die von der Vorhand gespielt wurde.
      */
     public ArrayList<Spielkarte> gibErlaubteKarten(ArrayList<Spielkarte> hand, SpielArt spielArt, Spielkarte sau, Spielkarte vorgegebeneKarte, Farbe soloFarbe, boolean sauFarbeVorhandGespielt) {
 
-        ArrayList<Spielkarte> gezwungeneKarten = new ArrayList<Spielkarte>();
+        ArrayList<Spielkarte> gezwungeneKarten = new ArrayList<>();
         //Wenn nur noch eine Karte auf der Hand ist, gibt es keine Wahl, welche Karte gespielt werden kann.
         if (hand.size() == 1) {
-            gezwungeneKarten.add(hand.get(0));
+            gezwungeneKarten.add(hand.getFirst());
             return gezwungeneKarten;
         }
         //Unterscheidung der Spielart.
@@ -101,10 +101,10 @@ public abstract class Mitspieler {
                 //Sonst darf Sau nur gelegt werden, nachdem die Farbe mindestens einmal in Vorhand gespielt wurde oder es der letzte Stich ist.
                 if ((vorgegebeneKarte.gebeFarbe() != sau.gebeFarbe() && !sauFarbeVorhandGespielt && hand.size() > 1)|| vorgegebeneKarte.istTrumpf(SpielArt.SAUSPIEL,null) ) {
                     //Entfernt Sau von der Hand, damit sie nicht mehr gespielt werden kann.
-                    hand.remove(sau); //Grund für das clonen von Hand
+                    hand.remove(sau); //Grund für das Clonen von Hand
                 }
 
-                //Sofern die Farbe der Karte von der Vorhand und der Gesuchten sau gleich sind, darf nur die Sau gelegt werden.
+                //Sofern die Farbe der Karte von der Vorhand und der gesuchten Sau gleich ist, darf nur die Sau gelegt werden.
                 for (Spielkarte karte : hand) {
                     if (karte.gebeWert() == Werte.SAU && vorgegebeneKarte.gebeFarbe() == sau.gebeFarbe() && karte.gebeFarbe() == sau.gebeFarbe() && !karte.istTrumpf(SpielArt.SAUSPIEL, soloFarbe)) {
                         gezwungeneKarten.add(karte);
@@ -137,20 +137,21 @@ public abstract class Mitspieler {
         if (!gezwungeneKarten.isEmpty()) {
             return gezwungeneKarten;
         } else {
+            //noinspection unchecked
             return (ArrayList<Spielkarte>) hand.clone();
         }
 
     }
 
     /*
-        Bestimmt welche Karten die Vorhand beim Sauspiel spielen darf.
+        Bestimmt, welche Karten die Vorhand beim Sauspiel spielen darf.
      */
 
     public ArrayList<Spielkarte> erlaubteKartenAusspielenBeiSauspiel(ArrayList<Spielkarte> hand, Spielkarte sau) {
-        ArrayList<Spielkarte> gezwungeneKarten = new ArrayList<Spielkarte>();
+        ArrayList<Spielkarte> gezwungeneKarten = new ArrayList<>();
         int anzahlSauFarbeKarten = 0;
         boolean hatSau = false;
-        //Bestimmt, ob die gesuchte Sau auf der Hand ist und wie viele Karten der Farbe der Sau auf der Hand sind.
+        //Bestimmt, ob die gesuchte Sau auf der Hand ist und wie viele Karten die Farbe der Sau auf der Hand sind.
         for (Spielkarte karte : hand) {
             if (karte.gebeFarbe() == sau.gebeFarbe() && !karte.istTrumpf(SpielArt.SAUSPIEL, null)) {
                 anzahlSauFarbeKarten++;
@@ -159,7 +160,7 @@ public abstract class Mitspieler {
                 }
             }
         }
-        //Wenn Spieler die Sau nicht hat, darf er alles legen.
+        // Wenn der Spieler die Sau nicht hat, darf er alles legen.
         if(!hatSau){
             return  hand;
         }
@@ -169,7 +170,7 @@ public abstract class Mitspieler {
                 //Es kann davon gelaufen werden → alle Karten dürfen gelegt werden.
                 gezwungeneKarten.add(karte);
             } else if (karte.gebeFarbe() != sau.gebeFarbe() || karte.istTrumpf(SpielArt.SAUSPIEL, null) || karte.gebeWert() == Werte.SAU) {
-                //Es kann nicht davon gelaufen werden, andere Karten die keine Trümpfe sind und die gleiche Farbe wie die gesuchte Sau haben, dürfen nicht gelegt werden.
+                //Es kann nicht davon gelaufen werden, andere Karten, die keine Trümpfe sind und die gleiche Farbe wie die gesuchte Sau haben, dürfen nicht gelegt werden.
                 gezwungeneKarten.add(karte);
             }
         }
@@ -177,10 +178,10 @@ public abstract class Mitspieler {
     }
 
     /*
-        Bestimmt welches Sauen ein Spieler aufgrund von seiner Hand ausrufen kann.
-        Gleichzeitig werden dem möglichen Sauen nach der Anzahl der Karten, der jeweiligen Farbe der Sau, nach sortiert.
-        Dabei ist die Sau mit dem wenigstens Karte, die die gleiche Farbe haben, auf der Hand bei Index 0.
-        Dies ist hilfreich da der Bot dadurch einfach die beste Sau zum Ausrufen wählen kann.
+        Bestimmt, welches Sauen ein Spieler aufgrund von seiner Hand ausrufen kann.
+        Gleichzeitig wird das mögliche Sauen nach der Anzahl der Karten, der jeweiligen Farbe der Sau, nach sortiert.
+        Dabei ist die Sau mit der wenigstens Karte, die die gleiche Farbe hat, auf der Hand bei Index 0.
+        Dies ist hilfreich, da der Bot dadurch einfach die beste Sau zum Ausrufen wählen kann.
      */
 
     public ArrayList<Farbe> sauZumAusrufen(ArrayList<Spielkarte> hand) {
@@ -224,14 +225,14 @@ public abstract class Mitspieler {
             }
 
         }
-        //Überprüft, ob eine Sau ausgerufen werden kann und sortiert sie in die Arraylist ein.
+        //Überprüft, ob eine Sau ausgerufen werden kann, und sortiert sie in die Arraylist ein.
         ArrayList<Farbe> erlaubteFarben = new ArrayList<>();
         if (anzahlGras != 0 && !hatGrasau) {
             erlaubteFarben.add(Farbe.GRAS);
         }
         if (anzahlSchellen != 0 && !hatSchellenSau) {
             if (anzahlSchellen < anzahlGras) {
-                erlaubteFarben.add(0, Farbe.SCHELLEN);
+                erlaubteFarben.addFirst(Farbe.SCHELLEN);
             } else {
                 erlaubteFarben.add(Farbe.SCHELLEN);
             }
