@@ -5,21 +5,20 @@ import java.util.ArrayList;
 //Programmierer: Tom
 
 public class SpielerModel {
-    private ArrayList<Spielkarte> handkarten; //speichert eigene Handkarten
+    private final ArrayList<Spielkarte> handkarten; //speichert eigene Handkarten
     private int welcherSpieler;
     //Attribute für eine Runde nach dem Ausrufen
     private SpielArt spielArt;
-    private int[] spieler; //speichert, wer ausruft und wer Mitspieler ist
+    private final int[] spieler; //speichert, wer ausruft und wer Mitspieler ist
     private Farbe farbe; //speichert Farbe der ausgerufenen Sau
     //Attribute für Lege-/Stichrunden
-    private ArrayList<Spielkarte> stich; //speichert Karten eines Stichs
-    private ArrayList<Spielkarte> letzterStich; //speichert Karten des vorherigen Stichs (für zukünftige Versionen)
+    private final ArrayList<Spielkarte> stich; //speichert Karten eines Stichs
     private int anzahlSpielerSchonGelegt; //gibt an, wie viele Spieler in der Lege-Runde dran waren
     private boolean dranLegen;
     private boolean dranSpielabsicht;
     private boolean dranFarbeSpielabsicht;
     //temporäre Attribute für GUI-Übergabe
-    private boolean sauFarbeVorhandGespielt; //Tim: Benötigt um zu überprüfen, ob die Sau gelegt werden darf.
+    private boolean sauFarbeVorhandGespielt; //Tim: Benötigt, um zu überprüfen, ob die Sau gelegt werden darf.
     //Attribute für Runde
     private int wiederholung;
     private int vorhand;
@@ -40,7 +39,7 @@ public class SpielerModel {
     }
 
     public void setzeHandkarten(ArrayList<Spielkarte> neueKarten) {
-        handkarten.clear(); //setzt Handkarten zurück (Bugfix, damit nach einer Runde nichts spielen nicht plötzlich handkarten 16 groß ist)
+        handkarten.clear(); //setzt Handkarten zurück (Bugfix, damit nach einer Runde nichts spielen nicht plötzlich Handkarten 16 groß ist)
         for (int i = 0; i < neueKarten.size(); i++) {
             handkarten.add(i, neueKarten.get(i));
         }
@@ -79,11 +78,11 @@ public class SpielerModel {
     }
 
     public Spielkarte gebeVorgegebeneKarte() {
-        return stich.get(0);
+        return stich.getFirst();
     }
 
     public void stichBeendet() {
-        letzterStich = stich;
+        //speichert Karten des vorherigen Stichs (für zukünftige Versionen)
         stich.clear();
         anzahlSpielerSchonGelegt = 0;
     }
@@ -121,7 +120,7 @@ public class SpielerModel {
     }
 
 
-    //Tim: benötigt um zu bestimmen, ob die gesuchte Sau gespielt werden darf.
+    //Tim: Benötigt, um zu bestimmen, ob die gesuchte Sau gespielt werden darf.
     public void setzteSauFarbeVorhandGespielt(boolean b) {
         sauFarbeVorhandGespielt = b;
     }
